--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Ffiles.worldwildlife.org%2Fwwfcmsprod%2Fimages%2FTiger_resting_Bandhavgarh_National_Park_India%2Fhero_small%2F6aofsvaglm_Medium_WW226365.jpg&imgrefurl=https%3A%2F%2Fwww.worldwildlife.org%2Fspecies%2Ftiger&tbnid=DkxTrO5ibg3cjM&vet=12ahUKEwi50e7U18v8AhWYhNgFHSg_DpUQMygBegUIARDgAQ..i&docid=V7d3lFgXfu8H2M&w=640&h=480&q=tiger&safe=active&ved=2ahUKEwi50e7U18v8AhWYhNgFHSg_DpUQMygBegUIARDgAQ" alt="tiger"/>
+	<img src="https://www.google.com/search?q=tiger&safe=active&sxsrf=AJOqlzU4vRKkiH3bA2YJGeQz1LM2y9bFmw:1673858184256&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj9iejT18v8AhXWXGwGHUvpDHEQ_AUoAXoECAEQAw&biw=1536&bih=726&dpr=1.25#imgrc=j9z5z3Qx5r_lnM" alt="Tiger"/>
 	
 	<script type="text/javascript" src="./script.js">
 </script>
