--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://www.google.com/search?q=tiger&safe=active&sxsrf=AJOqlzU4vRKkiH3bA2YJGeQz1LM2y9bFmw:1673858184256&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj9iejT18v8AhXWXGwGHUvpDHEQ_AUoAXoECAEQAw&biw=1536&bih=726&dpr=1.25#imgrc=j9z5z3Qx5r_lnM" alt="Tiger">
-	<script type="text/javascript" src="./script.js">
+	<img src="https://www.pexels.com/photo/tiger-above-green-grass-during-day-time-46251/" alt="Tiger">
 </script>
 
 </body>
