--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="https://www.pexels.com/photo/tiger-above-green-grass-during-day-time-46251/" alt="Tiger">
+	<img src="https://www.pexels.com/photo/tiger-above-green-grass-during-day-time-46251/" alt="Tiger" width="500" height="600">
+	
 
 </body>
 
