--- a/main.html
+++ b/main.html
@@ -8,8 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src="Photo by Pixabay from Pexels: https://www.pexels.com/photo/tiger-above-green-grass-during-day-time-46251/" alt="Tiger" width="500" height="600">
-	
+	<img src="https://cdn.mos.cms.futurecdn.net/qmTrmidGxtYqoT4zjoxPcV.jpg" alt="Tiger">
 
 </body>
 
